--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,23 +3,26 @@ plugins {
     id 'kotlin-android'
 }
 
+def globalConfiguration = rootProject.extensions.getByName("ext")
+
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion globalConfiguration["compileSdkVersion"]
+    buildToolsVersion globalConfiguration["buildToolsVersion"]
 
     defaultConfig {
         applicationId "com.ozgursakizli.simplechat"
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0.0"
+        minSdkVersion hasProperty('minSdk') ? minSdk.toInteger() : globalConfiguration["minSdkVersion"]
+        targetSdkVersion globalConfiguration["targetSdkVersion"]
+        versionCode globalConfiguration["appVersionCode"]
+        versionName globalConfiguration["appVersionName"]
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -36,10 +39,13 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android.material:material:1.3.0'
+    def appDependencies = rootProject.ext.appDependencies
+    // Android
+    implementation appDependencies.corektx
+    implementation appDependencies.appcompat
+    implementation appDependencies.constraintlayout
+    // Gogle
+    implementation appDependencies.googleMaterial
 
     // Test
     testImplementation 'junit:junit:4.13.2'
