--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,9 @@ ext {
     // Android
     corektxVersion = '1.3.2'
     appcompatVersion = '1.2.0'
+    activityVersion = '1.2.1'
     constraintlayoutVersion = '2.0.4'
+    lifecycleVersion = '2.3.0'
     // Google
     googleMaterialVersion = '1.3.0'
 
@@ -43,10 +45,13 @@ ext {
 
     // Module dependencies
     appDependencies = [
-            corektx         : "androidx.core:core-ktx:${corektxVersion}",
-            appcompat       : "androidx.appcompat:appcompat:${appcompatVersion}",
-            constraintlayout: "androidx.constraintlayout:constraintlayout:${constraintlayoutVersion}",
-            googleMaterial  : "com.google.android.material:material:${googleMaterialVersion}"
+            corektx           : "androidx.core:core-ktx:${corektxVersion}",
+            appcompat         : "androidx.appcompat:appcompat:${appcompatVersion}",
+            activity          : "androidx.activity:activity-ktx:${activityVersion}",
+            constraintlayout  : "androidx.constraintlayout:constraintlayout:${constraintlayoutVersion}",
+            lifecycleViewModel: "androidx.lifecycle:lifecycle-viewmodel-ktx:${lifecycleVersion}",
+            lifecycleLiveData : "androidx.lifecycle:lifecycle-livedata-ktx:${lifecycleVersion}",
+            googleMaterial    : "com.google.android.material:material:${googleMaterialVersion}"
     ]
     testDependencies = [
             jUnit       : "junit:junit:${jUnitVersion}",
