--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,17 @@ android {
     }
 
     buildTypes {
+        debug {
+            minifyEnabled false
+            shrinkResources false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "BASE_URL", '"https://jsonblob.com/api/"'
+        }
         release {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "BASE_URL", '"https://jsonblob.com/api/"'
         }
     }
 
@@ -55,7 +62,11 @@ dependencies {
     implementation appDependencies.koinCore
     implementation appDependencies.koinAndroid
     implementation appDependencies.koinViewModel
-
+    // Retrofit
+    implementation appDependencies.squareupretrofit
+    implementation appDependencies.squareupConverterGson
+    implementation appDependencies.squareupOkHttp
+    implementation appDependencies.squareupLoggingInterceptor
     // Test Libraries
     testImplementation testDependencies.jUnit
     androidTestImplementation testDependencies.jUnitExt
